<?xml version="1.0" encoding="utf-8"?>
<falcofinder.android.fuehrerschein.FurDashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#f8f9fe" >

 
    <!--  Messages Button -->
    <Button
        android:id="@+id/btn1"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/selectorfuricon1"
        android:text="@string/menu_mode1"   />
 
 
    <Button
        android:id="@+id/btn2"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/selectorfuricon2"
        android:text="@string/menu_mode2"  />
 
  
    <Button
        android:id="@+id/btn3"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/selectorfuricon3"
        android:text="@string/menu_mode3" />
  

    <Button
        android:id="@+id/btn4"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/selectorfuricon4"
        android:text="@string/menu_mode4" />

 
    <Button
        android:id="@+id/btn5"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/selectorfuricon5"
        android:text="@string/menu_mode5" />


    <Button
        android:id="@+id/btn6"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/selectorfuricon6"
        android:text="@string/menu_mode6"
         />
    
         <Button
        android:id="@+id/btn7"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/furoption"
        android:text="@string/menu_mode7" />

 
    <Button
        android:id="@+id/btn8"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/furexit"
        android:text="@string/menu_exit" />


   
    
</falcofinder.android.fuehrerschein.FurDashboardLayout>