<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF"
    >

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutqid"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="#FFFFFF"
    >
 <CheckBox
        android:id="@+id/checkBoxHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hideemail" android:checked="true" android:textColor="#000000"/>
 
 <View android:layout_height="1dip" android:layout_width="1dip"/>
 
    <TextView
        android:id="@+id/qid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

  
        android:textColor="#000000"
        android:text="@string/qid"
        android:textSize="16dip"/>

    <EditText
        android:id="@+id/editTextQid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

</LinearLayout>
       
   
         
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutsubj"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="#FFFFFF"
    >

    <TextView
        android:id="@+id/subj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

  
        android:textColor="#000000"
        android:text="@string/subj"
        android:textSize="16dip"/>

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:inputType="textPersonName" />

</LinearLayout>


          <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutbody"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="#FFFFFF"
    >
         <TextView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

  
        android:textColor="#000000"
        android:text="@string/body"
        android:textSize="16dip"/>
         
    <EditText
        android:id="@+id/editTextBody"
        android:layout_width="fill_parent"
        android:layout_height="80dip" >
         
    </EditText>
    
    </LinearLayout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutbtn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:gravity="center_horizontal"
    android:background="#FFFFFF"
    >
    <Button
        android:id="@+id/post"
        android:layout_width="90dp"
        android:layout_height="30dp"
       
       android:tag="tagpost"
        android:gravity="center_horizontal"
        android:text="@string/ok"
   		android:background="@drawable/selectorbtnyellow"
   		         android:clickable="true"
         android:onClick="onClick"
        />
    <View android:layout_height="1dip" android:layout_width="2dip"/>
     <Button
        android:id="@+id/goforum"
        android:layout_width="90dp"
        android:layout_height="30dp"
       android:tag="tagforum"
                android:clickable="true"
         android:onClick="onClick"
        android:gravity="center_horizontal"
        android:text="@string/forum"
   		android:background="@drawable/selectorbtnyellow"
        />
     <View android:layout_height="1dip" android:layout_width="2dip"/>
     <Button
        android:id="@+id/gohome"
        android:layout_width="90dp"
        android:layout_height="30dp"
       android:tag="home"
                android:clickable="true"
         android:onClick="onClick"
        android:gravity="center_horizontal"
        android:text="@string/home"
   		android:background="@drawable/selectorbtnyellow"
        />
</LinearLayout>
    <TextView
        android:id="@+id/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    
        android:gravity="center"
        android:padding="10dip"
    
       
        android:textSize="16dip"/>

<include layout="@layout/furchatfooter"/>
    
    </LinearLayout>
    