<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF"
    >
    <!-- Include Action Bar -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ActionBarCompat" >
          <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:paddingLeft="15dip"
        android:scaleType="center"
       android:background="@null"
        android:src="@drawable/furlogochat" 
          android:clickable="true" android:onClick="onClick"
          android:tag="back"
        />


     <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:paddingLeft="15dip"
        android:scaleType="center"
       android:background="@null"
        android:src="@drawable/furlogochat" 
          android:clickable="true" android:onClick="onClick"
          android:tag="back"
        />
     
     	</RelativeLayout>
     
    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
      android:textColor="#000000"
        android:paddingLeft="10dip"
        android:gravity="center_vertical"
      
        android:text="@string/connect_to_the_cloud"
        android:textSize="16dip"/>

    <TextView
        android:id="@+id/connect_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:padding="10dip"
    
       
        android:text="@string/connect_text"
        android:textSize="16dip"/>

    <TextView
        android:id="@+id/select_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:textColor="#000000"
        android:text="@string/select_account"
       
        android:layout_margin="5dip"/>

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
       
        android:background="#808080" />

    <ListView
        android:id="@+id/select_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_margin="10dip"
        android:divider="#FFFFFF"
        android:textSize="16dip"
      
        >
    </ListView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dip"
      
        android:padding="25dip"
        android:gravity="center_vertical"
     android:textColor="#000000"
     
        android:text="@string/do_you_want_to_connect"
        android:textSize="16dip"/>

    <LinearLayout
        android:id="@+id/connect_footer"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
     
       >

        <Button
            android:id="@+id/connect"
            android:text="@string/connect"
       
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>
